syntax = "proto3";

package kessel.inventory.v1beta2;

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta2";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta2";

enum Allowed {
  ALLOWED_UNSPECIFIED = 0;
  ALLOWED_TRUE = 1;
  ALLOWED_FALSE = 2;
  // ALLOWED_CONDITIONAL = 3; // uncomment when used
}
